# homework

./: README.md  ppocr_test.py  pyproject.toml  sentenceSplitter_test.py
data/: faq_data.json
homework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ppOcr/: reader.py
week03/ppOcr/: __init__.py
week05/FAQ/: .env.example  .gitignore  api_models.py  config.py  embedding_model.py  faq_indexer.py  faq_retriever.py  faq_service.py  file_watcher.py  main.py  milvus_client.py  text_splitter.py
week05/multiJump/: .env.template  config.py  graph_manager.py  kg_manager.py  main.py  multihop_coordinator.py  rag_manager.py
